[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry]
name = "pollencli-pyline-removal"
version = "0.0.1"
description = ""
authors = ["pollenjp <polleninjp@gmail.com>"]
license = "MIT"
packages = [
    { include = "pollencli", from = "src" },
]

[tool.poetry.scripts]
rm-pyline = "pollencli.pyline_removal.cli:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.910"
